--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
     "react-native-elements": "^3.0.0-alpha.1",
+    "react-native-fetch": "^2.0.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-paper": "^4.4.1",
     "react-native-reanimated": "~1.13.0",
